Stop with the blinking already!

BUG: 97376